DuPont DevSB/src/objects/SampleRequestWSInfo__mdt.object
<CustomObject>
    <description>Parameters for test and prod Donelly web service</description>
    <fields>
        <fullName>Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SampleRequestWSInfo</label>
    <pluralLabel>SampleRequestWSInfos</pluralLabel>
</CustomObject>